create default chapter page

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,5 +1,5 @@
 :root {
-    --navbarColor: linear-gradient(to right, #ffffff00, #F1EDFF, #F1EDFF, #F1EDFF, #F1EDFF, #ffffff00);
+    --navbarColor: linear-gradient(to right, #ffffff00, #DFEDFDd5, #DFEDFDd5, #DFEDFDd5, #DFEDFDd5, #ffffff00);
 }
 
 #navbar {
