--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -1,6 +1,6 @@
 .welcome::after {
   content: "";
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100vw;
   height: min(10vh, 100px);
@@ -10,14 +10,13 @@
 
 .welcome::before {
   content: "";
-  position: absolute;
-  top: -40%;
-  right: -20%;
+  position: fixed;
+  top: -20vw;
+  right: -25vw;
   opacity: 0.5;
-  width: min(500px, 100%);
+  width: min(50vw, 100%);
   aspect-ratio: 1;
   border-radius: 50%;
-  background-color: black;
   background: radial-gradient(50% 50% at 50% 50%, #F13232 0%, rgba(231, 67, 67, 0.00) 79.69%);
 }
 
@@ -27,38 +26,71 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .welcome__container {
   text-align: center;
-  margin-top: min(10vh, 50px); 
+  margin-top: min(10vh, 50px);
   color: #E15C5C;
   font-size: 30px;
   font-weight: 800;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2em;
+  max-width: 480px;
 }
 
-button {
+.welcome button:hover {
+  transform: scale(1.3);
+}
+
+.welcome button {
+  max-width: 200px;
+  margin: auto;
+}
+
+.welcome button,
+.login button {
   width: 100%;
   background-color: #E15C5C;
   color: #fff;
   border: none;
   padding: 10px 20px;
-  margin-top: 13vh;
   font-size: 16px;
   cursor: pointer;
   border-radius: 15px;
+  transition: 0.5s;
+}
+
+@keyframes jump {
+  from {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(5%);
+  }
+
+  to {
+    transform: translateY(0);
+  }
+}
+
+.welcome__image:hover {
+  animation: jump 1s ease-in-out infinite;
+
 }
 
 .welcome__image {
+  transition: 0.5s;
   max-width: max(35vh, 100px);
   position: absolute;
   bottom: 0;
   right: 3%;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
 }
 
 
-@media only  screen and (max-width: 480px) {
-
-}
+@media only screen and (max-width: 480px) {}
