--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -11,7 +11,9 @@
     margin: 0 auto; 
     padding: 0;
     width: 100vw;
-    /* height: 100vh; */
+    max-width: 85vh;
+    overflow: auto;
+    padding-bottom: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
