--- a/src/styles/RewardScreen.scss
+++ b/src/styles/RewardScreen.scss
@@ -1,91 +1,91 @@
-.mainContainerRS
-{
+.mainContainerRS {
     width: 100vw;
-    height: 100vh;
-    // padding: 16px 16px; 
-    background-color: #fafafa;
+    background-color: white;
 
-    .rectRS{
-        // margin-top: 20%;
-
+    .rectRS {
+        padding: 16px 2em;
         width: 100%;
-        height: 15%;
         background-color: #d7ffb8;
+        height: 15%;
         display: flex;
         justify-content: center;
         align-items: center;
-        .textRS
-        {
-            color: #58cc02; 
+
+        .textRS {
+            color: #58cc02;
             font-size: 32px;
             font-weight: 900;
         }
     }
 
-    .gif{
+    .gif {
         display: flex;
         justify-content: center;
         align-items: center;
-        .gifRS
-        {
+
+        .gifRS {
             width: 60%;
         }
     }
 
-    .xp
-    {
+    .xp {
         display: flex;
         justify-content: space-evenly;
-        .textContainer
-        {
+
+        .textContainer {
             // border: 2px solid #ffc800;
             background-color: #ffc800;
 
             color: #ffffff;
-            border-radius: 8px; 
+            border-radius: 8px;
             height: 128px;
             width: 128px;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            padding: 4px 4px; 
-            .text{
+            padding: 4px 4px;
+
+            .text {
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 background-color: #ffffff;
                 width: 100%;
-                height: 100%; 
+                height: 100%;
                 border-radius: 4px;
 
-                font-size: 32px; 
+                font-size: 32px;
             }
-            .text:nth-of-type(1)
-            {
+
+            .text:nth-of-type(1) {
                 color: #ffc800;
             }
         }
-        .textContainer:nth-of-type(2)
-        {
+
+        .textContainer:nth-of-type(2) {
             background-color: #58cc02;
-            .text
-            {
+
+            .text {
                 color: #58cc02;
             }
         }
-        .text img{
-            height: 28px;
-            width: 28px;
+
+        .text img {
+            height: min(100%, 50px);
+            width: min(100%, 50px);
             margin: 8px 8px;
         }
     }
 }
 
-@media only screen and (min-width: 500px){
-    .mainContainerRS
-    {
+@media only screen and (min-width: 500px) {
+    .mainContainerRS {
         width: 60%;
-        margin: 0 auto; 
+        margin: 0 auto;
+    }
+
+    .xp {
+        transform: translateY(-50px);
     }
 }
