--- a/src/styles/chapter.scss
+++ b/src/styles/chapter.scss
@@ -1,5 +1,6 @@
 #ChapterDefault {
     .train-container {
+        z-index: -1;
         position: fixed;
         width: 100vw;
         bottom: 0;
@@ -68,50 +69,98 @@
     width: 90%;
     max-width: 1300px;
     margin-inline: auto;
-    display: flex;
-    align-items: center;
-    padding-inline: (12px, 3vw);
     border-radius: 15px;
-    justify-content: space-around;
-    gap: 12px;
+    padding-bottom: min(100px, 12vh);
 
 
-    .QuestionContainer {
-        width: 85%;
-        max-width: min(100%, 550px);
-        text-align: center;
 
-        .question {
-            color: #192914;
-            padding: 2em;
-            border-radius: 12px;
-            background: #aaf37c;
-        }
-
-        .options {
-
-            .option:hover {
-                transform: scale(1.1);
-                background: rgba(255, 255, 255, 0.192);
-            }
-
-            .option {
-                padding: 12px 1.3em;
-                border-radius: 12px;
-                background: #EBE7FB;
-                box-shadow: 0px 4px 13px 2px rgba(0, 0, 0, 0.25);
-                margin-inline: auto;
-                margin-top: 10%;
-                margin-bottom: 10%;
-                max-width: 220px;
-                transition: 0.5s;
-            }
-        }
+    .LectureVideo {
+        width: min(88vw, 1000px);
+        aspect-ratio: 1.6;
+        margin: 2em auto;
+        position: relative;
     }
 
-    .questionsImg > img,
-    .questionsImg {
-        max-width: min(100%, 75vw);
+    .chapternavigationButtonConntainer {
+        display: flex;
+        justify-content: space-between;
+        width: min(1000px, 90vw);
+        gap: 2em;
+    }
+
+    .ChangechaoterStateBtn {
+        all: unset;
+        transition: 0.5s;
+        cursor: pointer;
+        padding: 0.5em 2em;
+        border-radius: 0.3em;
+        border: 0.3px solid rgba(120, 120, 223, 0.799);
+        color: #222;
+        background-color: none;
+        margin-bottom: min(100px, 12vh);
+        width: 40%;
+        text-align: center;
+    }
+
+    .ChangechaoterStateBtn:hover {
+        background-color: rgb(177, 201, 229);
+    }
+
+    .tectureVideoCaontainer {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .QuizContainer {
+
+        display: flex;
+        align-items: center;
+        padding-inline: (12px, 3vw);
+        justify-content: space-around;
+        gap: 12px;
+
+
+
+        .QuestionContainer {
+            width: 85%;
+            max-width: min(100%, 550px);
+            text-align: center;
+
+            .question {
+                color: #192914;
+                padding: 2em;
+                border-radius: 12px;
+                background: #aaf37c;
+            }
+
+            .options {
+
+                .option:hover {
+                    transform: scaleX(1.1);
+                    background: rgb(232, 251, 220);
+                }
+
+                .option {
+                    padding: 12px 1.3em;
+                    border-radius: 12px;
+                    box-shadow: 0px 4px 4px 2px rgba(103, 123, 192, 0.25);
+                    margin-inline: auto;
+                    margin-top: 10%;
+                    margin-bottom: 10%;
+                    max-width: 220px;
+                    cursor: pointer;
+                    transition: 0.5s;
+                }
+            }
+        }
+
+        .questionsImg>img,
+        .questionsImg {
+            max-width: min(100%, 75vw);
+        }
     }
 }
 
