add video at start of chapter

--- a/src/styles/chapter.scss
+++ b/src/styles/chapter.scss
@@ -159,6 +159,7 @@
 
         .questionsImg>img,
         .questionsImg {
+            border-radius: 2em;
             max-width: min(100%, 75vw);
         }
     }
