--- a/src/styles/RewardScreen.scss
+++ b/src/styles/RewardScreen.scss
@@ -1,7 +1,22 @@
 a {
     all: unset;
 }
+.mainContainerRS::after {
+    content: "";
+    display: block;
+    position: absolute;
+    background: url(../Assets/graphy/celebratingBunny.gif);
+    height: min(300px, 50%);
+    aspect-ratio: 1;
+    top: 2em;
+    right: 2em;
+    background-position: center;
+    background-size: contain;
+    z-index: -1;
+
+}
 .mainContainerRS::before {
+    transition: 0.2s;
     content: "";
     height: 100vh;
     width: 100vw;
@@ -9,14 +24,15 @@ a {
     top: 0;
     background: url(../Assets/graphy/confetti.webp);
     z-index: -1;
+    opacity: 0;
+    animation: fadeout 10s ease 1;
 }
 .mainContainerRS {
     width: 100vw;
+    background: rgba(246, 255, 243, 0.1);
     min-height: 100vh;
-    background: rgba(255, 255, 255, 0.721);
-    // background-color: white;
-
-
+    
+    
     .rectRS {
         padding: 16px 2em;
         width: 100%;
@@ -32,14 +48,15 @@ a {
             font-weight: 900;
         }
     }
-
+    
     .gif {
         display: flex;
         justify-content: center;
         align-items: center;
-
+        opacity: 0;
+        animation: fadeout 2s ease 1;
+        
         .gifRS {
-            // display: none;
             width: 30%;
             height: min(300px, 75vh);
         }
@@ -47,6 +64,8 @@ a {
 
     .xp {
         display: flex;
+        width: min(600px, 98%);
+        margin: auto;
         justify-content: space-evenly;
 
         .textContainer {
@@ -97,6 +116,10 @@ a {
 }
 
 @media only screen and (min-width: 500px) {
+    .mainContainerRS::after {
+        bottom: 0;
+        top: unset;
+    }
     .mainContainerRS {
         width: 100%;
         margin: 0 auto;
@@ -104,5 +127,27 @@ a {
 
     .xp {
         transform: translateY(-50px);
+    }
+}
+
+@keyframes fadeout {
+    from {
+        transform: translateY(-100%);
+        display: block;
+        opacity: 1;
+    }
+    50% {
+        display: block;
+        transform: translateY(0%);
+    }
+    99% {
+        display: block;
+        opacity: 0;
+        transform: translateY(0%);
+    }
+    to {
+        display: none;
+        opacity: 0;
+        transform: translateY(0%);
     }
 }
